added mobile interface

--- a/mobile.html
+++ b/mobile.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Media</title>
 	<link rel="stylesheet" href="develop.css">
+	<link rel="stylesheet" href="nubex.css" media="screen" />
+<link rel="stylesheet" href="nubexMobile.css" media="handheld" />
 	<script>
 		function myFunction() {
   var x = document.getElementById("myLinks");
